# wonderland

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
wonderland/environments/dev/modify/: provider.tf  tables_payment.tf  tasks_payment.tf  variables.tf
wonderland/environments/dev/setup/: databases.tf  outputs.tf  provider.tf  roles_accountadmin.tf  roles_analyst.tf  schemas.tf  stages.tf  variables.tf  warehouses.tf
wonderland/tasks/payment/: payment_task.sql
wonderland/tests/udfs/: test_validate.py
wonderland/udfs/: __init__.py  validate.py
